Readme datei wurde geendert

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,7 @@
 == README
 Natalija
-Meine erse WebSeite
+
+Meine erse WebSeite...
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
